--- a/HISWLAN_Search.html
+++ b/HISWLAN_Search.html
@@ -108,10 +108,10 @@
 <body>
     <div class="container">
         <h1>Searching for HIS WLAN Login ID/Password</h1>
-        <label for="name">Name:</label><br>
+        <label for="name">Name</label><br>
         <input type="text" id="name" placeholder="Enter your name" required><br>
 
-        <label for="dob">Date of Birth (YYYYMMDD):</label><br>
+        <label for="dob">Date of Birth (YYYYMMDD)</label><br>
         <input type="text" id="dob" placeholder="Enter your date of birth" required><br>
 
         <button onclick="fetchData()">Search</button>
